/user/auth is workin and gateway is also working.